<resources>
    <string name="app_name">Tarea3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="access_internet">Se tiene acceso a Internet</string>
    <string name="no_access">No se tiene acceso a Internet</string>
    <string name="currency_usd">USD</string>
    <string name="currency_crc">CRC</string>
    <string name="currency_cop">COP</string>
    <string name="currency_pen">PEN</string>
    <string name="currency_mxn">MXN</string>
    <string name="currency_clp">CLP</string>
</resources>
